--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-type-animation": "^3.2.0",
     "remixicon": "^4.6.0"
   },
   "devDependencies": {
